--- a/simple-responsive-examples/styles/style.css
+++ b/simple-responsive-examples/styles/style.css
@@ -1,28 +1,45 @@
-.row{
-    height: 400px;
-   display: flex;
-   gap: 10px;
-   margin-top: 10px;
+.row {
+  height: 400px;
+  display: flex;
+  gap: 10px;
+  margin-top: 10px;
 }
-.row > div{
-    flex: 1;
+.row > div {
+  flex: 1;
 }
-img{
-    width: 100%;
-    height: 100%;
+img {
+  width: 100%;
+  height: 100%;
 }
-.row-3{
-    
-    gap: 2px;
+.row-3 {
+  gap: 2px;
 }
-.row-3 img{
-    
-    height: calc((100% - 5px)/2);
-    /* height: 50%; */
+.row-3 img {
+  height: calc((100% - 5px) / 2);
+  /* height: 50%; */
 }
 
-.sq-collage{
-    display: grid;
-    grid-template-columns: repeat(2,1fr);
-    gap: 5px;
+.sq-collage {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 5px;
+}
+
+/* small devices screen */
+@media screen and (max-width: 576px) {
+  .row {
+    flex-direction: column;
+    height: auto;
+  }
+  .sq-collage {
+    grid-template-columns: 1fr;
+  }
+}
+
+/* medium devices screen */
+@media screen and (min-width: 576px) and (max-width: 992px) {
+  .row {
+    flex-direction: column;
+    height: auto;
+  }
 }
